--- a/Reports/Iraq Report/Iraq_Report.Rmd
+++ b/Reports/Iraq Report/Iraq_Report.Rmd
@@ -43,8 +43,12 @@ democracy_table =abv%>%
   filter(Percent<1)%>%
   mutate(Question = str_wrap(Question, width = 25))
 democracy_table%>%
-  ggplot(aes(x=Question, y=Percent*100, fill=Question))+geom_bar(stat = "identity")+coord_flip()+theme_bw()+theme(plot.title = element_text(hjust = .5),axis.ticks = element_blank(), panel.grid = element_blank(), legend.title = element_blank(), legend.position = "bottom", legend.direction = "horizontal", axis.text.y =element_blank() )+ylab("Percent")+scale_fill_ab("mix")+ggtitle("Iraqi Outlook on Democracy")+geom_text(aes(label= round(Percent*100)), nudge_y = 1.3)
-
+  
+abv_plot = function(dataframe, x, y){
+    x= enquo(x)
+    y=enquo(y)
+  ggplot(dataframe,aes(x=!!x, y=!!y*100, fill=!!x))+geom_bar(stat = "identity")+coord_flip()+theme_bw()+theme(plot.title = element_text(hjust = .5),axis.ticks = element_blank(), panel.grid = element_blank(), legend.title = element_blank(), legend.position = "bottom", legend.direction = "horizontal", axis.text.y =element_blank() )+ylab("Percent")+scale_fill_ab("mix")+ggtitle("Iraqi Outlook on Democracy")+geom_text(aes(label= round(!!y*100)), nudge_y = 1.3)
+}
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
