--- a/Reports/Iraq Report/Iraq_Report.Rmd
+++ b/Reports/Iraq Report/Iraq_Report.Rmd
@@ -9,39 +9,41 @@ output: pdf_document
 knitr::opts_chunk$set(echo = TRUE)
 remove(list = ls())
 source("/Users/pharned/Google Drive/Coding/R Projects/Arab-Barometer-Wraps/Functions.R")
-abv=abv_en
+
 ```
 
 
 
 ```{r pressure, echo=FALSE}
+abv=abv_en
 democracy_list=find_variable("democracy", abv)
-for(i in democracy_list){
-  name = names(val_lab(abv[[i]]))
-  name = paste(name, collapse = ", ")
-  print(name)
-  if(grepl("strongly", name)==TRUE){
-    abv[[i]]=ifelse(abv[[i]]%in%c(1,2),1,0)
-    print("Recoding ", var_lab(abv[[i]]))
-  }else if(grepl("dictatorship", name)==TRUE){
-    abv[[i]]=ifelse(abv[[i]]%in%c(6:10),1,0)
-  }else if(grepl("suitable", name)==TRUE){
-    abv[[i]]=ifelse(abv[[i]]%in%c(6:10),1,0)
-    
-  }else{
-    print(paste("Could not Recode", i, sep=" "))
-  }
-}
+abv=recode_country(abv)%>%
+  mutate(Age= ifelse(Q1001%in%c(18:29),"18-29s"))
 
-abv=recode_country(abv)
+labs_to_recode = c("strongly", "statement", "suitable", "dictatorship")
+recode_values = list(c(1,2), c(4), c(6:10), c(6:10))
+
+
+
+recode_test = recoderizer(abv, "Q409","throughout", c(1,2))
+
+
+
+
+subset_democracy_list=unlist(democracy_list)%>%
+  set_names(nm=NULL)
+
 democracy_table =abv%>%
-  mutate_at(unlist(democracy_list), function(x){x=x*abv_en$wt})%>%
   filter(Country=="Iraq")%>%
-  select_at(unlist(democracy_list))%>%
-  summarise_all(mean, na.rm=TRUE)%>%
+  mutate_at(subset_democracy_list[4:7], function(x){x=ifelse(x%in%c(1,2),1,0)})%>%
+  mutate_at(subset_democracy_list[[1]], function(x){x=ifelse(x%in%c(4),1,0)})%>%
+  mutate_at(subset_democracy_list[2:3], function(x){x=ifelse(x%in%c(6:10),1,0)})%>%
+  summarise_at(subset_democracy_list,list(~weighted.mean(., w=wt, na.rm = TRUE)))%>%
   gather(Question, Percent)%>%
-  filter(Percent<1)%>%
-  mutate(Question = str_wrap(Question, width = 25))
+  mutate(Question = str_wrap(Question, width = 25))%>%
+  mutate(Label = str_wrap(names(democracy_list), width = 25))
+
+
 democracy_table
   
 abv_plot = function(dataframe, x, y){
@@ -49,21 +51,46 @@ abv_plot = function(dataframe, x, y){
     y=enquo(y)
   ggplot(dataframe,aes(x=!!x, y=!!y*100, fill=!!x))+geom_bar(stat = "identity")+coord_flip()+theme_bw()+theme(plot.title = element_text(hjust = .5),axis.ticks = element_blank(), panel.grid = element_blank(), legend.title = element_blank(), legend.position = "bottom", legend.direction = "horizontal", axis.text.y =element_blank() )+ylab("Percent")+scale_fill_ab("mix")+ggtitle("Iraqi Outlook on Democracy")+geom_text(aes(label= round(!!y*100)), nudge_y = 1.3)
 }
+
+democracy_plot = abv_plot(democracy_table, Label, Percent)
+plotterizer(democracy_table, label)
+
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
 
 ```{r}
-
+trend_democracy_list= c("q515a2", "q511","q512","q5161","q5162","q5163")
  trend_data%>%
-  mutate_at(unlist(democracy_list), function(x){x=x*abv_en$wt})%>%
+  recode_country()%>%
   filter(Country=="Iraq")%>%
-  select_at(unlist(democracy_list))%>%
   group_by(wave)%>%
-  summarise_all(mean, na.rm=TRUE)
+  summarise_at(trend_democracy_list,list(~weighted.mean(., w=wt, na.rm = TRUE)))%>%
   gather(Question, Percent)%>%
   filter(Percent<1)%>%
   mutate(Question = str_wrap(Question, width = 25))
 
 ```
+
+```{r stateoftheeconomy}
+
+economic_variables1 = find_variable("MIC SITUATION",abv_en)%>%
+  as_tibble()%>%
+  gather(Label, Question)
+
+country_direction_tables = abv%>%
+  filter(Country=="Iraq")%>%
+  mutate_at(economic_variables1$Question, function(x){x=ifelse(x%in%c(1,2),1,0)})%>%
+  summarise_at(economic_variables1$Question, list(~weighted.mean(.,w=wt,na.rm=TRUE)))%>%
+  gather(Question, Percent)%>%
+  mutate(Label = str_wrap(economic_variables1$Label, width = 25))
+
+country_direction_plot = abv_plot(country_direction_tables,Label, Percent)+ggtitle("Iraqi outlook on the economy", subtitle = "% saying the economy is very good or good")+theme(plot.title = element_text(size = 16), plot.subtitle = element_text(hjust = .5))
+
+by_variables= c("Age", "Education", "Gender")
+
+country_direction_by_summaries = map(by_variables, ~grouping_function(dataframe = abv, x=.x, varlist = economic_variables1$Question)) 
+
+```
+
 
