--- a/Data Validation/DataCheck_report.Rmd
+++ b/Data Validation/DataCheck_report.Rmd
@@ -2,11 +2,13 @@
 title: "Data Check"
 author: "Patrick Harned"
 date: "9/3/2019"
-output: pdf_document
+output: html_document
 ---
 
 ```{r setup, include=FALSE}
 source("/Users/pharned/Google Drive/Coding/R Projects/Arab-Barometer-Wraps/Functions.R")
+source("/Users/pharned/Documents/Arab-Barometer/Data Validation/Data Check.R")
+
 abv=abv_en
 knitr::opts_chunk$set(echo = FALSE)
 ```
@@ -22,9 +24,10 @@ Q211 Lebanon,Palestine if Q211=SYSMIS and Q210 in (1,2,3) -> 99. Libya dirty cod
 
 ```{r}
 variables = c("Q211", "Q210")
-Q211 = abv%>%
+abv%>%
   filter(Q210 %in% c(1:3)&Q211%in%c(NA))%>%
-  select(Q210, Q211, id, country)
+  select(id, country,Q210, Q211)%>%
+  print(n=100)
 ```
 Palestine,Yemen: incorrect filter, some answers for q210=not at all, dk,refused
 This means there are observations im Q210 (to what extent do you t hink that corruption is present) saying (dont know, no extent, or refused), but we see the same observations reporting that they belive the government is tackling corruption to a certain extent for Q211 (1/3)
@@ -44,14 +47,13 @@ Q211A is extent of corruption at the local level. Interviewers were not supposed
 
 
 ```{r}
-Q210_1 = abv%>%
+ abv%>%
   filter(Q210%in%c(1:3)&Q211A%in%c(NA))%>%
   select(country,splita, id, Q211A, Q210)%>%
   print(n=100)
-
-Q210_2 = abv%>%
+ abv%>%
   filter(Q210%in%c(4,98,99,NA), Q211A%in%c(1:3))%>%
-    select(Q211A, Q210, splita, id)%>%
+    select(country, id, splita, Q211A, Q210)%>%
   print(n=100)
 
 ```
@@ -63,7 +65,8 @@ Only Muslims were supposed to be asked q602_4a, bu there are about 80 observatio
 abv%>%
   filter_at(c("Q602_4A"), any_vars(.%nin%c(NA)))%>%
   filter(country%nin%c(9)&Q1012!=1)%>%
-  select(id, Q602_4A, country, splita, Q1012, Q1012A)
+  select(country, id, splita, Q602_4A, Q1012, Q1012A)%>%
+  print(n=100)
 ```
 
 
@@ -75,7 +78,8 @@ Yemen incorrect filter. some answers for splita=1
 abv%>%
   filter_at(c("Q604B_1", "Q604B_3"), any_vars(.%nin%c(NA)))%>%
   filter(country!=9&splita==1)%>%
-  select(id, Q604B_1,Q604B_3, country, splita)
+  select(country, id, splita, Q604B_1,Q604B_3)%>%
+  print(n=100)
 ```
 
 
@@ -91,7 +95,8 @@ Actually only  relevant for Lebanon, Iraq and Libya
 abv %>% 
     filter_at(dplyr::vars(starts_with("Q605")), any_vars(. %in%c(NA)))%>%
   filter(country!=9&splita==2&Q1012==1)%>%
-  select(starts_with("Q605A"), id, country)
+  select(id, country, starts_with("Q605A"))%>%
+  print(n=100)
   
 
 
@@ -101,7 +106,8 @@ Yemen incorrect filter. some answers for splita=2
 abv %>% 
     filter_at(dplyr::vars(starts_with("Q605A")), any_vars(. %nin%c(NA)))%>%
   filter(country==22&splita==1&Q1012==1)%>%
-  select(starts_with("Q605A"), id, country, splita)
+  select(id, country, splita, starts_with("Q605A"))%>%
+  print(n=100)
 ```
 
 
@@ -113,7 +119,8 @@ Q607_7 Lebanon, Asked only to Muslims - Question was also asked to Druze in Leba
 abv%>%
   filter_at(dplyr::vars(starts_with("Q607")), any_vars(.%nin%c(NA)))%>%
   filter(Q1012!=1)%>%
-  select(starts_with("Q607"),id, country, Q1012, Q1012A) 
+  select(id, country, Q1012, Q1012A,starts_with("Q607"))%>%
+  print(n=100)
 ```
 
 Yemen incorrect filter, some answers for splita=1 ( again i think he means 2 here)
@@ -122,14 +129,16 @@ Yemen incorrect filter, some answers for splita=1 ( again i think he means 2 her
 abv%>%
   filter_at(c("Q703"), any_vars(.%nin%c(NA)))%>%
   filter(splita==2&country!=9)%>%
-  select(Q703, id, country)
+  select(id, country, Q703)%>%
+  print(n=100)
 ```
  Yemen incorrect filter. some answers for Q851B=refused, dk or no or INAP ( not sure what this means)
 ```{r}
 
 abv%>%
   filter(Q851B%nin%c(NA)&Q851A%in%c(2,98,99))%>%
-  select(id, country, Q851B, Q851A)
+  select(id, country, Q851B, Q851A)%>%
+  print(n=100)
 
 ```
 Q855A  Yemen, few incorrect answers for splita=1
@@ -139,7 +148,8 @@ Yemen incorrect filter, some answers for splita=1
 abv_en%>%
   filter_at(c("Q852","Q853A", "Q854", "Q855A", "Q855B"), any_vars(.%nin%c(NA)))%>%
               filter(splita==1&country!=9)%>%
-  select(id, country, splita)
+  select(id, country, splita, Q852,Q853A,Q854,Q855A,Q855B)%>%
+  print(n=100)
 ```
 
 
@@ -148,9 +158,9 @@ abv_en%>%
 
 ```
 
-
+These are all incorrect observations for splita=1/2
 ```{r}
-
+map(fix_splits, print, n=1000)
 ```
 Q853B Morocco if splita=2 and Q1002=1 and q853B=sysmis ->99 Refused.  Palestine: Filter only by splita=2. Yemen, only filter by split A=2 with few incorrect answers for splita=1
 
